# sanctionpay

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  run-local.ps1
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  contract.yml
agent/: agent.py
backend/: main.py  requirements.txt
backend/sanctions/: __init__.py  fetcher.py  scheduler.py
contracts/: Cargo.toml  Odra.toml
contracts/src/: lib.rs
frontend/: index.html
