[package]
name = "sanctionpay-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { version = "2.8.0", default-features = false }

[dev-dependencies]
odra-test = { version = "2.8.0" }

[build-dependencies]
odra-build = { version = "2.8.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.0", default-features = false }
odra-casper-livenet-env = { version = "2.8.0" }

[[bin]]
name = "sanctionpay_contract_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "sanctionpay_contract_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "sanctionpay_contract_deploy"
path = "bin/deploy.rs"
test = false

[features]
default = []

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
